# udo

./: .gitignore  Makefile.am  Makefile.in  autogen.sh  conf.mint  configure.ac  configure.in  doconf  udo-svn-20160408.tar.bz2
amiga/: AGReader.tar.bz2  AmigaGuideDT.lha  AmigaHardware.guide  Amiga_FAQ.guide  MinGuide-1.0.lha  WINGUIDE.REA  about.html  amigaguide.txt  attribute.html  background.html  copyright.html  global.html  index.html  irc.guide  irc.guide.info  node.html  paths_nodes.html  winguide.lha
amiga/AMIGAGUIDE/: AmigaGuide.License  AmigaGuide.License.info  AmigaGuide.des  AmigaGuide.des.info  AmigaGuide.lha  ReadME  ReadME.info
amiga/ARexxGuide/: ARexxGuide.guide.info  ARexxGuide.info  ARexxGuide.rexx  ARexxGuide.rexx.info  ARexxGuide2_0A.readme  ARexxGuide2_0A.readme.info  ARxG_20patch.readme  ARxG_20patch.readme.info  ARx_Cmd.ag  ARx_Cmpr.rexx  ARx_Cmpr.rexx.info  ARx_Elements.ag  ARx_Elements2.ag  ARx_Elements3.ag  ARx_Error.ag  ARx_Func.ag  ARx_Func2.ag  ARx_Func3.ag  ARx_Func4.ag  ARx_Guide.xref  ARx_IactExamples.rexx  ARx_IactExamples.rexx.info  ARx_Index  ARx_Instr.ag  ARx_Instr2.ag  ARx_Instr3.ag  ARx_Intro.ag  ARx_Operator.ag  ARx_PrgUcr.ag  ARx_RarpInfoWin.rexx  ARx_RarpInfoWin.rexx.info  ARx_Reg.rexx  ARx_Reg.rexx.info  ARx_Setup.rexx  ARx_Setup.rexx.info  ARx_Tknq.ag  ARx_Tutor.ag  ARx_UcrTutor1.ag  ARx_UcrTutor2.ag  ArexxGuide.guide  (+4 more)
amiga/ARexxGuide/Editors/: ARx_Help.ed  ARx_Help.ed.info  ARx_Help.edge  ARx_Help.edge.info  ARx_Help.ttx  ARx_Help.ttx.info  ARx_HelpSystem.README  ARx_HelpSystem.README.info  Ed-startup  Ed-startup.info
amiga/ARexxGuide/Extras/: ARx_Glossary.rexx  ARx_Glossary.rexx.info  ARx_GlossaryPort.rexx  ARx_GlossaryPort.rexx.info  ARx_Help.rexx  ARx_Help.rexx.info  ARx_MakeNodeList.rexx  ARx_MakeNodeList.rexx.info  UnCrunch.rexx  UnCrunch.rexx.info
doc/: Makefile.am  Makefile.common  Makefile.in  missing_doc.txt
doc/de/: Makefile.in
doc/de/appendix/history/: rel6pl14.ui
doc/de/syntax/: spec.ui
doc/en/: Makefile.in
doc/en/appendix/history/: rel6pl14.ui
doc/en/commands/: (img).ui
doc/en/syntax/: spec.ui
doc/sql/: udo.sql  udosql.pl  versions.sql
po/: cs.po  da.po  de.po  es.po  fi.po  fr.po  it.po  ja.po  lv.po  nl.po  nn.po  pl.po  pt.po  sv.po  udo.pot
potools/: Makefile.am  molist.c  polinguas.c
src/: Makefile.am  Makefile.in  abo.h  cfg.c  cfg.h  chr.c  chr.h  chr_all.h  chr_ttf.h  cli.c  commands.h  config_h.in  config_h.in.orig  constant.h  debug.h  env.c  export.h  file.c  file.h  gui.h  img.c  img.h  img_eps.h  img_png.h  import.h  kwset.c  lang.c  lang.h  lang_utf.h  msg.c  msg.h  obstack.c  par.c  par.h  str.c  sty.c  sty.h  symbolset.rtf  tab.c  toc.c  (+29 more)
src/AtariPC/: nf_ops.c  udo.prj
src/OpenWatcom/msdos/: udo.tgt  udo.wpj
src/OpenWatcom/os2/: udo.tgt  udo.wpj
src/OpenWatcom/win32/: udo.tgt  udo.wpj
src/Win32MSVC/: UDO.dsp  UDO.ncb  UDO.opt
src/lcc/: udo.dep  udo.prj
tools/: Makefile.am  Makefile.in
tools/chm/: .gitignore  Makefile.am  avltree.c  avltree.h  chm_htmlhelp.h  chmbase.c  chmbase.h  chmcmd.c  chmfiftimain.c  chmfiftimain.h  chmglib.c  chmintl.h  chmlib.h  chmls.c  chmobjinstconst.h  chmproject.c  chmproject.h  chmreader.c  chmreader.h  chmsearchreader.c  chmsearchreader.h  chmsearchwriter.c  chmsearchwriter.h  chmsitemap.c  chmsitemap.h  chmspecialfiles.c  chmspecialfiles.h  chmstream.c  chmstream.h  chmtools.h  chmtypes.c  chmtypes.h  chmversion.h  chmwriter.c  chmwriter.h  chmxml.c  chmxml.h  cp_1252.h  fasthtmlparser.c  fasthtmlparser.h  (+23 more)
tools/doc/: AmigaGuide.base.txt  AmigaGuide.v39.txt  AmigaGuide.v40.txt  macroref.hlp  winhelpmacro.txt
tools/helpdeco/: Makefile.am  Makefile.in  compat.c  compat.h  helpdec1.c  helpdeco.c  helpdeco.h  splitmrb.c  zapres.c
tools/hypview/: .gitignore  Makefile.am  Makefile.in
tools/hypview/doc/: Makefile.common  Makefile.in
tools/hypview/doc/de/: Makefile.in
tools/hypview/doc/en/: Makefile.in
tools/hypview/gtk/: Makefile.am  Makefile.in  hypview
tools/hypview/hyp/: .gitignore  Makefile.am  Makefile.in  bla.hyp  bla.ref  cgic.c  hcp_comp.c  htmljs.h  hyp.c  hypinfo.c
tools/hypview/icons/: Makefile.am  history.h
tools/hypview/include/: hv_vers.h  picture.h  windows_.h
tools/hypview/pic/: Makefile.in
tools/hypview/po/: Makefile.in.in
tools/hypview/tools/: Makefile.in
tools/hypview/tos/: Makefile.in  dl_user.s  hv_disp.c  nf_shutd.c
tools/ipf/Ipfc400/: IPFC.TXT  IPFC20.INF  IPFCHT.NLS  IPFDAN.NLS  IPFDEU.NLS  IPFENG.NLS  IPFESP.NLS  IPFFIN.NLS  IPFFRA.NLS  IPFFRC.NLS  IPFHUN.NLS  IPFITA.NLS  IPFKOR.NLS  IPFNLD.NLS  IPFNOR.NLS  IPFPOL.NLS  IPFPRC.NLS  IPFPTG.NLS  IPFRDC.NLS  IPFSVE.NLS  IPFTHI.NLS  IPFUND.NLS
tools/ipf/doc/: inf02b.txt
tools/ipf/docview_x86_64-linux/: docview  docview.bookmark  docview.inf
tools/ipf/docview_x86_64-linux/desktop-integration/: docview-inf.xml  (+3 more)
tools/ipf/jaow/: INSTALL.CMD  JAOWFAQ.TXT  JAOWMSG.TXT  LICENSE.TXT  NUMOFF.COM  READ.ME  SETUP.PIF
udosh/: Makefile.in
udosh/gtk/: Makefile.am  Makefile.in  gtkcompat.h  udogtk.c  udogtk.h
udosh/gtk/Manual/: Makefile.in
udosh/gtk/icons/: Makefile.in
udosh/win32/: Makefile.am  Makefile.in  udo_abo.c  udo_cfg.c  udo_chr.c  udo_debug.c  udo_env.c  udo_file.c  udo_img.c  udo_kwset.c  udo_lang.c  udo_msg.c  udo_obstack.c  udo_par.c  udo_str.c  udo_sty.c  udo_tab.c  udo_toc.c  udo_toc_html.c  udo_tp.c  udo_udo.c  udo_udomem.c  udo_udosym.c  udo_upr.c
udosh/win32/Manual/: Makefile.in
udosh/win32/res/: Makefile.in
udosh020/: HISTORY.TXT  README.TXT  UDOSHELL.APP  UDOSHELL.ERR  udoshell.inf
udosh020/RESOURCE.D/: UDOSHELL.BGH  UDOSHELL.RSC
udosh020/RESOURCE.E/: UDOSHELL.BGH  UDOSHELL.ERR  UDOSHELL.RSC
udosh020/RESOURCE.F/: UDOSHELL.BGH  UDOSHELL.ERR  UDOSHELL.RSC
udosh046/: FORMAT.INF  LICENCE.TXT  SETUP.APP  SETUP.GSC  SETUP.RSC  UDOSHELL.APP  UDOSHELL.HYP  USHELICN.RSC  setup.loc  udoshell.inf
udosh046/ENGLISH/: UDOSHELL.BGH  UDOSHELL.ERR  UDOSHELL.RSC
udosh046/FRENCH/: UDOSHELL.BGH  UDOSHELL.ERR  UDOSHELL.RSC
udosh046/GERMAN/: UDOSHELL.REF  UDOSHELL.RSC
udosh046/UDO-Shell/: udoshell.bgh  udoshell.err
(+21 files in other folders)
